fix vertical alignment for checkbox

--- a/app/styles/less/modules/_forms.less
+++ b/app/styles/less/modules/_forms.less
@@ -68,7 +68,7 @@
   input[type="checkbox"],
   input[type="radio"] {
     position: absolute;
-    margin-top: .25em;
+    margin-top: .35em;
     margin-left: -1.4em;
 
     &:focus {
